# OpenClaw-but-I-made-it

./: .gitignore  CLAUDE.md  CLAUDE_HANDOFF.md  README.md  agent-watchdog  agent_client.py  agent_service.py  pyproject.toml  react_memory.py  react_tools.py  server.py
Jarvis/: chat.py  jarvis.service  patch_bugs.py  patch_main.py  requirements.txt  run.py
Jarvis/config/: server_config.py
Jarvis/core/: agent_router.py  jarvis_memory_system.py  prompt_builder.py  session_manager.py
Jarvis/memory/: learning.json  notes.json  personality.json  user_profile.md
Jarvis/server/: main.py
Jarvis/tools/: email_agent.py  ollama_cmd.py  ollama_swarm.py
Jarvis/workers/: background_worker.py  personality_learner.py  proactive_suggester.py  safety_engine.py  workflow_engine.py
cmd/: CLAUDE.md  EVENT_MESH.md  README.md  agent_client.py  arch_schema.py  blueteam_agent.py  contract_test_template.py  debug_logger.py  dep_graph.py  ollama_agent_core.py  react_tools.py  reconciler_checks.py  role_lessons.py  run_me.py  server.py  sysinfo.sh  task_chain.py  webhook_dispatcher.py
cmd/DOCS/: ARCH_SCHEMA.md  CLAUDE_COORDINATION.md  INTEGRATION_CONTRACT.md  JARVIS_INTEGRATION_GUIDE.md  integration_guide.md  unification_progress.md
cmd/blueteam/: blueteam_agent.py
cmd/chain/: task_chain.py
cmd/core/: ollama_agent_core.py  react_memory.py  react_tools.py  subagent.py
cmd/guiagent/: gui_agent.py  gui_atspi.py  gui_cv.py  (+9 more)
jarvis/: README.md  __init__.py  bootstrap.py  chat.py  cli.py  config.py  jarvis.service  pyproject.toml  run.py  server.py
jarvis/adapters/: __init__.py
jarvis/clients/: __init__.py  cmd.py  gmail.py  ollama.py  swarm.py
jarvis/core/: __init__.py  arbiter.py  chat.py  compaction.py  conversation.py  invoker.py  orchestrator.py  planner.py  prompt.py  router.py  scheduler.py  tools.py
jarvis/docs/: BUILD_SPEC.md  P3_BUILT.md
jarvis/dreaming/: __init__.py
jarvis/mail/: tool_email.py
jarvis/memory/: __init__.py  chunker.py  embeddings.py  files.py  index.py  search.py  tool_get.py  tool_search.py  tool_user_profile.py  tool_write.py  watcher.py  workspace.py
jarvis/tests/acceptance/: test_cmd_smoke.py  test_compaction_floor.py  test_index_rebuild.py  test_mirror_smoke.py  test_rocket_sim.py
jarvis/tests/fixtures/: populate_workspace.py
jarvis/tests/fixtures/mirror/: canonical.md
jarvis/tests/integration/: test_chat_endpoint.py  test_mirror_curator_runtime.py  test_ollama_dm.py
jarvis/tests/unit/: test_arbiter.py  test_arbiter_dispatch_integration.py  test_chat_loop.py  test_chunker.py  test_cli.py  test_cmd_client.py  test_compaction.py  test_conversation.py  test_conversation_arbiter_reset.py  test_delegate_tool_calls_invoker.py  test_embeddings.py  test_files.py  test_gmail_client.py  test_index.py  test_invoker.py  test_mirror_curator_renderer.py  test_mirror_curator_worker.py  test_orchestrator.py  test_p0_smoke.py  test_planner.py  test_prompt.py  test_router.py  test_search.py  test_search_hybrid.py  test_swarm_client.py  test_tool_get.py  test_tool_search.py  test_tool_user_profile.py  test_tool_write.py  test_tools_registry.py  test_watcher.py  test_workspace.py
jarvis/workers/: __init__.py  mirror_curator.py
jarvis/workspace/: .gitignore  README.md
logs/: blueteam_alerts.jsonl
swarm/: .gitignore  CLAUDE.md  README.md  _paths.py  base_agent.py  ollama-swarm.service  orchestrator_v2_1.py  run_me.py  set_model.sh  setup.sh  swarm2_main.py
(+68 files in other folders)
